--- a/index.html
+++ b/index.html
@@ -1,29 +1,27 @@
 <!doctype html>
-<title>Pfand Wars 0.1</title>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Pfand Wars 0.1</title>
+  <style>
+    body{font-family:system-ui;background:#222;color:#eee;text-align:center;margin-top:10vh}
+    button{padding:10px 20px;margin:8px;font-size:1.1em}
+    #leader{margin-top:20px;font-size:0.9em}
+  </style>
+</head>
 <body>
   <h1>Pfand Wars</h1>
   <div id="pfand">Pfand: 0</div>
   <div id="hunger">Hunger: 100</div>
   <button onclick="collect()">Sammle Dosen</button>
   <button onclick="travel()">Reise zum Festival</button>
-<script>
-let pfand=0, hunger=100;
-function collect(){pfand+=Math.floor(Math.random()*3)+1; hunger-=5; update();}
-function travel(){if(pfand>=50){alert("Festival erreicht!");}else{alert("Brauche 50 Pfand für Ticket");}}
-function update(){
-  document.getElementById('pfand').textContent="Pfand: "+pfand;
-  document.getElementById('hunger').textContent="Hunger: "+hunger;
-  if(hunger<=0){alert("Du bist verhungert – Game Over"); location.reload();}
-}
-setInterval(()=>{hunger--; update();},5000);
-  // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
+  <div id="leader"></div>
 
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+<script type="module">
+// ---------- Firebase ----------
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
+import { getFirestore, collection, addDoc, getDocs, orderBy, limit, query } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+
 const firebaseConfig = {
   apiKey: "AIzaSyDPBladG2D1YNjulqP1Lno2Pu3xOqa0AFI",
   authDomain: "pfand-wars.firebaseapp.com",
@@ -31,10 +29,59 @@ const firebaseConfig = {
   storageBucket: "pfand-wars.firebasestorage.app",
   messagingSenderId: "219073213670",
   appId: "1:219073213670:web:4f25af0f304429d5a43727",
-  measurementId: "G-88SGTNYX0W"
+  measurementId: "G-88SGTNYXow"
+};
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+
+// ---------- Spiel ----------
+let pfand = 0, hunger = 100;
+
+window.collect = function () {
+  pfand += Math.floor(Math.random() * 3) + 1;
+  hunger -= 5;
+  update();
 };
 
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
+window.travel = function () {
+  if (pfand >= 50) {
+    alert("Festival erreicht!");
+    saveHighscore(pfand);
+  } else {
+    alert("Brauche 50 Pfand für Ticket");
+  }
+};
+
+function update() {
+  document.getElementById('pfand').textContent = "Pfand: " + pfand;
+  document.getElementById('hunger').textContent = "Hunger: " + hunger;
+  if (hunger <= 0) {
+    alert("Du bist verhungert – Game Over");
+    location.reload();
+  }
+}
+
+setInterval(() => {
+  hunger--;
+  update();
+}, 5000);
+
+// ---------- Leaderboard ----------
+async function saveHighscore(score) {
+  const name = prompt("Highscore! Namen eingeben:") || "Anonym";
+  await addDoc(collection(db, "scores"), { name, score, ts: Date.now() });
+  showLeaderboard();
+}
+
+async function showLeaderboard() {
+  const q = query(collection(db, "scores"), orderBy("score", "desc"), limit(10));
+  const snap = await getDocs(q);
+  let board = "Leaderboard:\n";
+  snap.forEach((doc, i) => {
+    board += `${i + 1}. ${doc.data().name} – ${doc.data().score}\n`;
+  });
+  alert(board);
+}
 </script>
+</body>
+</html>
