--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Pfand Wars 0.2</title>
+  <title>Pfand Wars 0.3</title>
   <style>
-    body{font-family:system-ui;background:#222;color:#eee;text-align:center;margin-top:8vh}
+    body{font-family:system-ui;background:#222;color:#eee;text-align:center;margin-top:6vh}
     button{padding:10px 20px;margin:6px;font-size:1em}
     #inv{margin-top:10px;font-size:0.9em;color:#aaa}
+    #log{margin:15px auto;width:320px;height:100px;background:#111;color:#0f0;overflow-y:auto;text-align:left;font-size:0.85em;padding:5px}
   </style>
 </head>
 <body>
@@ -16,6 +17,7 @@
 
   <button onclick="collect()">Sammle Dosen</button>
   <button onclick="travel()">Reise zum Festival</button>
+  <button onclick="explore()">Erkunde Straße</button>
 
   <!-- Item-Shop -->
   <hr>
@@ -24,6 +26,9 @@
   <button onclick="buy('sparkle')">Glitzer-Steine 10 Pfand</button>
   <button onclick="buy('caravan')">Wohnwagen 100 Pfand</button>
   <div id="inv"></div>
+
+  <!-- Boss-Log -->
+  <div id="log"></div>
 
 <script type="module">
 // ---------- Firebase ----------
@@ -46,10 +51,10 @@ const db = getFirestore(app);
 let pfand = 0, hunger = 100, detector = 0, sparkle = 0, caravan = 0;
 
 window.collect = function () {
-  // Detektor verhindert manchmal Leer-Dosen
   const found = Math.floor(Math.random() * 3) + 1 + (detector > 0 ? 1 : 0);
   pfand += found;
   hunger -= 5;
+  log(`+${found} Pfand`);
   update();
 };
 
@@ -62,6 +67,36 @@ window.travel = function () {
   }
 };
 
+window.explore = function () {
+  // 30 % Chance auf Rentnerin-Boss
+  if (Math.random() < 0.3) {
+    bossFight();
+  } else {
+    const found = Math.floor(Math.random() * 5) + 1;
+    pfand += found;
+    log(`Erkundung: +${found} Pfand`);
+    update();
+  }
+};
+
+// ---------- Boss ----------
+function bossFight() {
+  log("RENTNERIN BOSS erscheint!");
+  const playerRoll = Math.floor(Math.random() * 6) + 1 + sparkle;
+  const bossRoll = Math.floor(Math.random() * 6) + 3;
+  log(`Du würfelst: ${playerRoll} – Rentnerin: ${bossRoll}`);
+  if (playerRoll >= bossRoll) {
+    const loot = 10 + Math.floor(Math.random() * 11);
+    pfand += loot;
+    log(`Sieg! +${loot} Pfand`);
+  } else {
+    hunger -= 10;
+    log("Niederlage – 10 Hunger");
+  }
+  update();
+}
+
+// ---------- Shop ----------
 window.buy = function (what) {
   const prices = { detector: 15, sparkle: 10, caravan: 100 };
   if (pfand < prices[what]) { alert("Zu wenig Pfand!"); return; }
@@ -73,6 +108,7 @@ window.buy = function (what) {
   update();
 };
 
+// ---------- UI ----------
 function update() {
   document.getElementById('pfand').textContent = "Pfand: " + pfand;
   document.getElementById('hunger').textContent = "Hunger: " + hunger;
@@ -82,6 +118,12 @@ function update() {
 function updateInv() {
   document.getElementById('inv').textContent =
     `Detektor: ${detector} | Glitzer: ${sparkle} | Wohnwagen: ${caravan}`;
+}
+
+function log(text) {
+  const box = document.getElementById('log');
+  box.textContent += text + "\n";
+  box.scrollTop = box.scrollHeight;
 }
 
 setInterval(() => { hunger--; update(); }, 5000);
